--- a/resources/sass/TwAppsColor.scss
+++ b/resources/sass/TwAppsColor.scss
@@ -1,3 +1,12 @@
 
+$basic-white: #ffffff;
+$basic-label-color: #5D5D5D;
 $basic-gray: #ececec;
+$dark-gray: #bcbcbc;
 $icon-gray: #6E6E6E;
+
+$button-label-color: #00535D;
+$unmute-button-color: #AAF9CC;
+$mute-button-color: #FF5B62;
+$show-button-color: #AAF9EE;
+$hide-button-color: #FF91AB;
