--- a/resources/sass/mixin.scss
+++ b/resources/sass/mixin.scss
@@ -1,9 +1,30 @@
 
 @mixin reset-button {
+  appearance: none;
   background-color: transparent;
   border: 0;
+  padding: 0;
 
   &:focus {
     outline: 0;
   }
+}
+
+//携帯用の隠す、チラ見、ミュート、ミュート解除アイコン
+@mixin div-icon($icon-url) {
+  background: url($icon-url) center center / contain no-repeat;
+  height: 18px;
+  margin-right: 3px;
+  width: 25px;
+}
+
+//携帯用の隠す、チラ見、ミュート、ミュート解除ボタン
+@mixin mobile-mute-button($bg-color) {
+  @include reset-button;
+  background-color: $bg-color;
+  color: $button-label-color;
+  display: flex;
+  height: 30px;
+  justify-content: center;
+  width: 50%;
 }
