--- a/resources/sass/components/MutedUserList.scss
+++ b/resources/sass/components/MutedUserList.scss
@@ -1,4 +1,8 @@
 
+.muted-user-list {
+  padding-bottom: 50px;
+}
+
 .muter-discription {
   background: $basic-gray url('../../img/mute_icon.svg') center center / auto 70px no-repeat;
   font-size: 1.25rem;
