--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -14,3 +14,5 @@
 @import 'components/MutedUserInfo';
 @import 'components/UnmuteButton';
 @import 'components/ShowTweetButton';
+@import 'components/MutedTweet';
+@import 'components/MutedTweetList';
