--- a/resources/sass/components/MutedUserList.scss
+++ b/resources/sass/components/MutedUserList.scss
@@ -4,8 +4,9 @@
 }
 
 .muter-discription {
-  background: $basic-gray url('../../img/mute_icon.svg') center center / auto 70px no-repeat;
+  background: $basic-gray url($image-dir + 'mute_icon.svg') center center / auto 70px no-repeat;
   font-size: 1.25rem;
+  // font-family: sans-serif;
   height: 80px;
   line-height: 80px;
   margin-top: 50px;
