--- a/resources/sass/TwAppsColor.scss
+++ b/resources/sass/TwAppsColor.scss
@@ -5,6 +5,7 @@ $basic-gray: #ececec;
 $dark-gray: #bcbcbc;
 $icon-gray: #6E6E6E;
 
+$unmuted-user-bg: #C7FFDF;
 $button-label-color: #00535D;
 $unmute-button-color: #AAF9CC;
 $mute-button-color: #FF5B62;
