--- a/resources/sass/TwAppsColor.scss
+++ b/resources/sass/TwAppsColor.scss
@@ -4,6 +4,7 @@ $basic-label-color: #5D5D5D;
 $basic-gray: #ececec;
 $dark-gray: #bcbcbc;
 $icon-gray: #6E6E6E;
+$black-transparent: rgba(0, 0, 0, .5);
 
 $unmuted-user-bg: #C7FFDF;
 $button-label-color: #00535D;
