--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -13,7 +13,9 @@ body {
 $image-dir: '../img/';
 
 @import 'mixin';
+@import 'components/TwitterApps';
 @import 'components/TwAppsHeader';
+@import 'components/MuteReminder';
 @import 'components/MuterMenu';
 @import 'components/MutedUserList';
 @import 'components/MutedUserInfo';
@@ -21,3 +23,4 @@ $image-dir: '../img/';
 @import 'components/ShowTweetButton';
 @import 'components/MutedTweet';
 @import 'components/MutedTweetList';
+@import 'components/LoadingImg';
