--- a/public/css/index.css
+++ b/public/css/index.css
@@ -81,6 +81,10 @@ body {
   width: 40px;
 }
 
+.mutereminder {
+  display: none;
+}
+
 .muter-menu {
   background-color: #ececec;
   bottom: 0;
@@ -354,5 +358,29 @@ body {
 .tweet-list-close-animation {
   display: none;
   height: 0;
+}
+
+.loading-img-container {
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  height: 80px;
+  justify-content: center;
+  left: calc(50% - 35px);
+  position: fixed;
+  top: 50%;
+  width: 70px;
+}
+
+.loading-img {
+  height: 50px;
+  width: 50px;
+}
+
+.loading-caption {
+  color: #ffffff;
+  font-size: 0.8rem;
 }
 /*# sourceMappingURL=index.css.map*/
