--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -24,3 +24,4 @@ $image-dir: '../img/';
 @import 'components/MutedTweet';
 @import 'components/MutedTweetList';
 @import 'components/LoadingImg';
+@import 'components/FatalMessage';
