--- a/resources/sass/components/FatalMessage.scss
+++ b/resources/sass/components/FatalMessage.scss
@@ -1,7 +1,11 @@
 
 .fatal-message-container {
-  height: 100vh;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+}
+
+.fatal-message {
+  white-space: pre-wrap;
 }
