--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,19 +1,15 @@
-// Body
-$body-bg: #f8fafc;
 
-// Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
+// // Colors
+$basic-white: #ffffff;
+$basic-label-color: #5D5D5D;
+$basic-gray: #ececec;
+$dark-gray: #bcbcbc;
+$icon-gray: #6E6E6E;
+$black-transparent: rgba(0, 0, 0, .5);
 
-// Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+$unmuted-user-bg: #C7FFDF;
+$button-label-color: #00535D;
+$unmute-button-color: #AAF9CC;
+$mute-button-color: #FF5B62;
+$show-button-color: #AAF9EE;
+$hide-button-color: #FF91AB;
