--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -13,3 +13,4 @@ $unmute-button-color: #AAF9CC;
 $mute-button-color: #FF5B62;
 $show-button-color: #AAF9EE;
 $hide-button-color: #FF91AB;
+$twitter-blue: #58C6E8;
