--- a/resources/sass/components/MutedUserInfo.scss
+++ b/resources/sass/components/MutedUserInfo.scss
@@ -56,5 +56,11 @@
   .muted-user-name {
     font-size: 1.5rem;
     margin-bottom: 17px;
+    line-height: 1.9rem;
+    padding-right: 30px;
+  }
+
+  .muted-username-container {
+    width: 420px;
   }
 }
