--- a/resources/sass/mixin.scss
+++ b/resources/sass/mixin.scss
@@ -17,6 +17,12 @@
   }
 }
 
+// aタグリセット {
+@mixin reset-anchor {
+  color: inherit;
+  text-decoration: none;
+}
+
 //携帯用の隠す、チラ見、ミュート、ミュート解除アイコン
 @mixin div-icon($icon-url) {
   background: url($icon-url) center center / contain no-repeat;
@@ -28,7 +34,7 @@
 @mixin pc-div-icon($icon-url) {
   background: url($icon-url) center center / contain no-repeat;
   height: 25px;
-  margin-right: 3px;
+  margin-right: 5px;
   width: 35px;
 }
 
@@ -45,7 +51,26 @@
 
 //mediaクエリの中で使用するPC用のチラ見ボタン用スタイル
 @mixin pc-show-button {
+  cursor: pointer;
   font-size: 1.25rem;
   height: 50px;
+  justify-content: flex-start;
+  //アイコン250px + 名前コンテナ420px + ミュートボタンのpaddingLeft15px - 微調整5px
+  padding-left: 680px;
   width: 100%;
+}
+
+//PC用のミュート解除、ミュートボタン
+@mixin pc-mute-button($bg-color, $label-color) {
+  @include reset-button;
+  align-items: center;
+  background-color: $bg-color;
+  color: $label-color;
+  cursor: pointer;
+  display: flex;
+  font-size: 1.25rem;
+  height: 50px;
+  padding-left: 15px;
+  padding-top: 5px;
+  width: 200px;
 }
